# GeantPlaying

CopyExample/: .GNUmakefile.swp  CMakeLists.txt  README.md
CopyExample/include/: detector.hpp  detectorconstruction.hpp  detectorhit.hpp  eventaction.hpp  geometrymessenger.hpp  physicslist.hpp  primarygeneratoraction.hpp  run.hpp  runaction.hpp  sensitivedetector.hpp
CopyExample/scripts/: init.mac  vis.mac
CopyExample/src/: detector.cpp  detectorconstruction.cpp  detectorhit.cpp  eventaction.cpp  geometrymessenger.cpp  ne697g4.cc  physicslist.cpp  primarygeneratoraction.cpp  run.cpp  runaction.cpp  sensitivedetector.cpp
SimpleExample/: SimpleExample.cc
SimpleExample/src/: ExG4ActionInitialization01.cc  SEDetectorConstruction.cc
